--- a/style.css
+++ b/style.css
@@ -183,7 +183,7 @@ small { font-family:'Proxima Nova Regular'; }
 
 
 .modal-dialog ul, .blankd ul {
-margin-left:25px
+	margin-left:25px
 }
 
 .modal-dialog h3, .blankd h3 {
@@ -8900,7 +8900,7 @@ body:not(.device-touch) .social-icon i {
 	display: block;
 	position: relative;
 	line-height: 21px;
-	padding: 0 0 0 24px;
+	padding: 0 30px 0 25px;
 	margin: 0;
 	font-size: 21px;
 	font-weight: 300;
