--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -63,6 +63,7 @@ body {
   background-color: #fff;
 }
 
+
 [tabindex="-1"]:focus {
   outline: 0 !important;
 }
@@ -5722,7 +5723,7 @@ a.close.disabled {
 
 .modal-open .modal {
   overflow-x: hidden;
-  overflow-y: auto;
+  overflow-y: auto !important;
 }
 
 .modal {
@@ -5733,15 +5734,23 @@ a.close.disabled {
   display: none;
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  overflow: auto !important;
   outline: 0;
+}
+body.modal-open {
+  position: fixed;
 }
 
 .modal-dialog {
+  overflow-y: initial !important;
   position: relative;
   width: auto;
   margin: 0.5rem;
   pointer-events: none;
+}
+.modal.fade.in {
+  transform: translateZ(0);
+  -webkit-transform: translateZ(0);
 }
 
 .modal.fade .modal-dialog {
@@ -5875,6 +5884,8 @@ a.close.disabled {
   -ms-flex: 1 1 auto;
   flex: 1 1 auto;
   padding: 1rem;
+  height: 350px;
+  overflow-y: auto
 }
 
 .modal-footer {
@@ -5908,6 +5919,7 @@ a.close.disabled {
 
 @media (min-width: 576px) {
   .modal-dialog {
+    overflow-y: initial !important;
     max-width: 500px;
     margin: 1.75rem auto;
   }
